Update backend source code - 2025-11-13